Expose parentStation stop attribute on api
